[package]
name = "arachne"
version = "0.1.0"
edition = "2021"

[dependencies]
interpreter = { package = "arachne-interpreter", path = "../interpreter" }
parse = { package = "arachne-parse", path = "../parse" }
vm = { package = "arachne-vm", path = "../vm" }
async-recursion = "1.0.5"
async-stream = "0.3.5"
clap = { version = "4.4.14", features = ["cargo"] }
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
