[package]
name = "arachne"
version = "0.1.0"
edition = "2021"

[dependencies]
interpreter = { package = "arachne-interpreter", path = "../interpreter" }
parse = { package = "arachne-parse", path = "../parse" }
vm = { package = "arachne-vm", path = "../vm" }
async-recursion = "1.1.1"
async-stream = "0.3.6"
clap = { version = "4.5.22", features = ["cargo"] }
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
