[package]
name = "arachne-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
futures = "0.3.28"
runtime = { package = "arachne-runtime", path = "../runtime" }
vm = { package = "arachne-vm", path = "../vm" }

[dev-dependencies]
insta = "1.31.0"
pretty_assertions = "1.4.0"
tokio = { version = "1.32.0", features = ["full"] }
