[package]
name = "arachne-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
futures = "0.3.31"
runtime = { package = "arachne-runtime", path = "../runtime" }
vm = { package = "arachne-vm", path = "../vm" }

[dev-dependencies]
insta = "1.41.1"
pretty_assertions = "1.4.1"
tokio = { version = "1.43.0", features = ["full"] }
