[package]
name = "arachne-interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
futures = "0.3.28"
once_cell = "1.18.0"
compiler = { package = "arachne-compiler", path = "../compiler" }
runtime = { package = "arachne-runtime", path = "../runtime" }
vm = { package = "arachne-vm", path = "../vm" }

[dev-dependencies]
pretty_assertions = "1.3.0"
