[package]
name = "arachne-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
runtime = { package = "arachne-runtime", path = "../runtime" }
async-recursion = "1.0.5"
async-stream = "0.3.5"
futures = "0.3.29"

[dev-dependencies]
pretty_assertions = "1.4.0"
tokio = { features = ["full"], version = "1.35.1" }
